[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Ula <ula.malin35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.1"
coverage = "^7.4.2"
pytest-html = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
