[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Ula <ula.malin35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.1"
coverage = "^7.4.2"
pytest-html = "^4.1.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
